added digest progress page and mock data

--- a/TelegramDigest.Web/wwwroot/css/site.css
+++ b/TelegramDigest.Web/wwwroot/css/site.css
@@ -3,7 +3,20 @@ html {
   min-height: 100%;
 }
 
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  margin: 0;
+}
+
+.content-container {
+  flex: 1 0 auto;
+  padding-bottom: 20px; /* Add some space before footer */
+}
+
 .footer {
+  flex-shrink: 0;
   width: 100%;
   white-space: nowrap;
   line-height: 60px;
