--- a/TelegramDigest.Web/Pages/Shared/_Layout.cshtml
+++ b/TelegramDigest.Web/Pages/Shared/_Layout.cshtml
@@ -42,6 +42,8 @@
 <script src="~/lib/autosize/dist/autosize.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true"></script>
 
+<partial name="_ValidationScriptsPartial"/>
+
 @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
